feat: add offline eclipse simulator
